@@ -145,6 +145,7 @@ main (int   argc,
   if (apl_spawn(argc, argv)) return 1;
 
   window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
+  gtk_window_set_title (GTK_WINDOW (window), "APLwrap");
   gtk_window_set_default_size (GTK_WINDOW (window), width, height);
     
   g_signal_connect (window, "destroy",
