@@ -1,5 +1,8 @@
 2014-08-28  Chris Moller  <moller@mollerware.com>
 
+	* menu.c (file_button_press_cb): Add double-click select/accept.
+	* aplwrap.c (main): Add main window title.
+	* edit.c (edit_object): Add edit window title.
 	* edit.c (edit_save_cb): New capability: nascent editor
 
 2014-08-25  Chris Moller  <moller@mollerware.com>
